# the-schizoid-cryptographer

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  main.cpp  test.txt
include/: decryptor.h  encrypter.h  random.h
src/decrypt/: decrypter.cpp
src/encrypter/: encrypter.cpp
